tests/valid/test_type_81.wyal
assert:
    forall(int[] xs):
        if:
            |xs| > 0
        then:
            xs != [0;0]
